[package]
name = "rust_doc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
clap = { version = "*", features = ["cargo", "debug", "derive", "env", "string", "unicode", "unstable-doc", "unstable-v5", "unstable-styles", "wrap_help"] }
dhcproto = "*"
env_logger = "*"
etherparse = "*"
ethtool = "*"
futures = "*"
indexmap = "*"
ipnet = "*"
ipnetwork = "*"
libc = "*"
log = "*"
mio = "*"
netlink-packet-route = "*"
nix = { version = "*", features = ["fs", "hostname", "ioctl", "net", "poll", "time", "term", "uio", "user", "zerocopy", "event"] }
pastey = "*"
regex = "*"
rtnetlink = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
serde_yaml = "*"
smol = "*"
syslog = "*"
tokio = { version = "*", features = ["full"] }
tokio-stream = "*"
tokio-util = { version = "*", features = ["time"] }
uuid = { version = "*" }
zbus = "*"
zvariant = "*"
